--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,9 @@
     "@tiptap/react": "^3.13.0",
     "@tiptap/starter-kit": "^3.13.0",
     "firebase": "^12.7.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.10.1",
     "tailwindcss": "^4.1.17"
   },
